<resources>
    <string name="app_name" translatable="false">NIU app</string>
    <string name="Notification_Title" translatable="false">&#160;&#160;&#160;&#160;&#160;&#160;Notification Permission&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="Notification_Content" translatable="false">We don\'t want you to miss any notifications\nWe hope you can agree to notification permissions.</string>
    <string name="Location_Title" translatable="false">&#160;&#160;&#160;&#160;&#160;&#160;Location Permission&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="Location_Content" translatable="false">We only use your location information in the app\nsuch as Zuvio GPS roll call\n and "Night Market Guy" achievement.\nThere is no abuse of permission\nHope you can allow the location permission.</string>
    <string name="Dialog_Cancel" translatable="false">Cancel</string>
    <string name="Dialog_Cancel2" translatable="false">Reject Cruelly</string>
    <string name="QAQ" translatable="false">QAQ</string>
    <string name="Dialog_OK" translatable="false">OK</string>
    <string name="Update_App" translatable="false">New Version Found</string>
    <string name="school_num" translatable="false">Student number</string>
    <string name="school_num_hint" translatable="false">Student number can not be empty</string>
    <string name="pwd" translatable="false">Password</string>
    <string name="pwd_hint" translatable="false">Password can not be empty</string>
    <string name="wrong_hint" translatable="false">Wrong account or password</string>
    <string name="login" translatable="false">Login</string>
    <string name="loginING" translatable="false">Login...</string>
    <string name="prog" translatable="false">Loading...</string>
    <string name="login_success" translatable="false">Login successfully</string>
    <string name="login_failed" translatable="false">Login failed</string>
    <string name="Net_ERR" translatable="false">Network connection err</string>
    <string name="TimeOut" translatable="false">Response timeout</string>
    <string name="Login_TimeOut" translatable="false">Login timeout, please log in again</string>
    <string name="back_again" translatable="false">Press again to exit</string>
    <string name="WebViewDev_Title" translatable="false">&#160;&#160;&#160;&#160;&#160;&#160;Problem Logging？&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="WebViewDev_Title2" translatable="false">&#160;&#160;&#160;&#160;&#160;&#160;Login failed&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="WebViewDev_Message" translatable="false">Having trouble logging in? \nIf you confirm that the network status is ok but still cannot log in, there may be some problem with the default WebView implementation of your device. You can select the option below to see if the problem is solved.</string>
    <string name="WebViewDev_Message2" translatable="false">Encountered this situation repeatedly？\nIf you confirm that the network status is ok but still show this dialog repeatedly, means there may be some problem with the default WebView implementation of your device. Please select the option below to see if the problem is solved.\nOf course it may also be caused by your inactivity for too long. If this is the case, you can ignore this prompt message and log in again.</string>
    <string name="WebViewDev_Btn1" translatable="false">Install\nWebDev</string>
    <string name="WebViewDev_Btn2" translatable="false">Update\nWebView</string>
    <string name="App_Update_Ver" translatable="false">Version:&#160;</string>
    <string name="App_Update_Btn0" translatable="false">Ignore</string>
    <string name="App_Update_Btn1" translatable="false">Update</string>
    <string name="App_Update_Btn1_Download" translatable="false">Download\nUpdate</string>
    <string name="App_Update_Btn1_Install" translatable="false">Install\nUpdate</string>
    <string name="HomePage" translatable="false">Home</string>
    <string name="Announcement" translatable="false">Announcement</string>
    <string name="Calendar" translatable="false">Calendar</string>
    <string name="Questionnaire" translatable="false">Questionnaire</string>
    <string name="Satisfaction_Survey" translatable="false">Satisfaction Survey</string>
    <string name="Satisfaction_Survey_Text" translatable="false">Hello:\n\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;This is a questionnaire satisfaction of this app. Please read it carefully and check the appropriate answers. This questionnaire is only for internal development and use of the app. The information you answer will never be public, please rest assured. Your valuable opinions will help us improve the quality of the app, thank you for your participation.\n</string>
    <string name="Start_Satisfaction_Survey" translatable="false">Start</string>
    <string name="Achievements" translatable="false">Achievements</string>
    <string name="huh" translatable="false">Synopsis</string>
    <string name="About" translatable="false">About</string>
    <string name="Settings" translatable="false">Settings</string>
    <string name="Theme" translatable="false">Theme：</string>
    <string-array name="theme_array">
        <item>System</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string name="ThemeChangedDialogTitle" translatable="false">&#160;&#160;&#160;&#160;Apply theme immediately&#160;&#160;&#160;&#160;</string>
    <string name="ThemeChangedDialogMessage" translatable="false">Changing themes requires restarting the application to apply the changes. Do you need to restart the app immediately?</string>
    <string name="DelUserDatabase" translatable="false">&#160;&#160;&#160;Delete Your Data&#160;&#160;&#160;</string>
    <string name="DelUserDatabaseMessage" translatable="false">Do you really want to delete your user data in database? This way, Achievements records will be lost, if you just have deep concerns about the information stored in our database, check the photo below, it shows the information stored in our Database, which does not contain sensitive information. Do you really want to delete anyway?</string>
    <string name="DelUserDatabaseSuccess" translatable="false">Delete Successfully</string>
    <string name="LogOut" translatable="false">Logout</string>
    <string name="EUNI" translatable="false">EUNI</string>
    <string name="Score_Inquiry" translatable="false">Score Inquiry</string>
    <string name="Class_Schedule" translatable="false">Class Schedule</string>
    <string name="Event_Registration" translatable="false">Event Registration</string>
    <string name="Contact_Us" translatable="false">Contact Us</string>
    <string name="Graduation_Threshold" translatable="false">Graduation Threshold</string>
    <string name="Subject_System" translatable="false">Subject System</string>
    <string name="Bus" translatable="false">Bus Trend</string>
    <string name="Zuvio" translatable="false">ZUVIO</string>
    <string name="Take_Leave" translatable="false">Take Leave</string>
    <string name="Download_Title" translatable="false">Downloading...</string>
    <string name="Download_Title2" translatable="false">Downloading updates...</string>
    <string name="Downloading" translatable="false">Downloading </string>
    <string name="Download_Prog" translatable="false">Download progress：</string>
    <string name="EUNI_Cources_INIT" translatable="false">Course initializing</string>
    <string name="Logout_Successful" translatable="false">Logout successfully</string>
    <string name="Only_Show_First_15_Entries" translatable="false">Only show first 15 entries</string>
    <string name="Dialog_JumpOutsideWebHint_Title" translatable="false">&#160;&#160;&#160;&#160;&#160;&#160;Hint&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="Dialog_JumpOutsideWebHint_Message" translatable="false">You will be redirected to an external browser to browse the announcement content.</string>
    <string name="Using_FakeGPS" translatable="false">FakeGPS detected!!\nThe "Night Market Guy" achievement can only be obtained after closing it.</string>
    <string name="EUNI_" translatable="false">browse courses on your phone</string>
    <string name="EUNI_Page_0_1_Title" translatable="false">Course Overview</string>
    <string name="EUNI_Page_0_1_Message" translatable="false">Enter to see all courses at a glance. Click to expand more course information, including "Announcements", "Grades", "Resources", "Assignments", and "Enter Courses". If you find that the course is not in the list, you can click on the upper right corner to refresh the course.</string>
    <string name="EUNI_Page_1_1_Title" translatable="false">Resources</string>
    <string name="EUNI_Page_1_1_Message" translatable="false">More convenient to check class resources on your phone, you can also download resources to your phone.</string>
    <string name="Event_ModInfo" translatable="false">ModInfo/Cancel</string>
    <string name="Event_ModInfo_role" translatable="false">&#160;Identity&#160;</string>
    <string name="Event_ModInfo_class" translatable="false">&#160;Class&#160;</string>
    <string name="Event_ModInfo_schnum" translatable="false">&#160;StudentNum&#160;</string>
    <string name="Event_ModInfo_name" translatable="false">&#160;Name&#160;</string>
    <string name="Event_ModInfo_tel" translatable="false">&#160;Tel&#160;</string>
    <string name="Event_ModInfo_mail" translatable="false">&#160;Mail&#160;</string>
    <string name="Event_ModInfo_remark" translatable="false">&#160;Remark&#160;</string>
    <string name="Event_ModInfo_RadioTextTitle" translatable="false">please select, if provider have furnish</string>
    <string name="Event_ModInfo_RadioTextMessage1" translatable="false">Eating Habits：</string>
    <string name="Event_ModInfo_Radio1_1" translatable="false">Non-vegetarian</string>
    <string name="Event_ModInfo_Radio1_2" translatable="false">Vegetarian</string>
    <string name="Event_ModInfo_Radio1_3" translatable="false">No Need</string>
    <string name="Event_ModInfo_RadioTextMessage2" translatable="false">Certification：</string>
    <string name="Event_ModInfo_Radio2_1" translatable="false">No Need</string>
    <string name="Event_ModInfo_Radio2_2" translatable="false">Yes</string>
    <string name="Event_ModInfo_btn1" translatable="false">Cancel</string>
    <string name="Event_ModInfo_btn2" translatable="false">Save</string>
    <string name="Webview_Provider_Title" translatable="false">Webview cannot operate?</string>
    <string name="Webview_Provider_Message" translatable="false">If your screen cannot perform any operations/feedback on the web page, it is a bug caused by the built-in WebView Provider. Two solutions are provided.</string>
    <string name="Webview_Provider_Title1" translatable="false">1. Update/Downgrade built-in WebView provider.</string>
    <string name="Webview_Provider_Message1" translatable="false">The built-in WebView Provider actually has a lot of bugs and can easily cause the webpage freeze. However, if you don’t want to download additional application and change the provider, then you only need to update/downgrade your built-in Webview Provider from here.\nafter it, you\'ll need to relogin NIU app again.</string>
    <string name="Webview_Provider_Btn1" translatable="false">Update/Downgrade built-in\nWebView provider</string>
    <string name="Webview_Provider_Title2" translatable="false">2. Download WebView Provider Beta (recommend)</string>
    <string name="Webview_Provider_Message2" translatable="false">Beta version has better stability in comparison. After downloading, open it and click "Change Provider" in the upper right corner.\nafter it, you\'ll need to relogin NIU app again.</string>
    <string name="Webview_Provider_Btn2" translatable="false">Download WebView\nProvider Beta</string>
</resources>