<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Activity_WebviewProvider">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="13dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="17dp"
                    android:gravity="center"
                    android:text="@string/Webview_Provider_Title"
                    android:textAllCaps="false"
                    android:textColor="@color/text_color"
                    android:textSize="29sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="11dp"
                    android:text="@string/Webview_Provider_Message"
                    android:textAllCaps="false"
                    android:textColor="@color/text_color"
                    android:textSize="19sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="17dp"
                    android:gravity="center"
                    android:text="@string/Webview_Provider_Title1"
                    android:textAllCaps="false"
                    android:textColor="@color/text_color"
                    android:textSize="23sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="11dp"
                    android:text="@string/Webview_Provider_Message1"
                    android:textAllCaps="false"
                    android:textColor="@color/text_color"
                    android:textSize="19sp" />

                <Button
                    android:id="@+id/button1"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_button2"
                    android:text="@string/Webview_Provider_Btn1"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="19sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="17dp"
                    android:gravity="center"
                    android:text="@string/Webview_Provider_Title2"
                    android:textAllCaps="false"
                    android:textColor="@color/text_color"
                    android:textSize="23sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="11dp"
                    android:text="@string/Webview_Provider_Message2"
                    android:textAllCaps="false"
                    android:textColor="@color/text_color"
                    android:textSize="19sp" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_button2"
                    android:text="@string/Webview_Provider_Btn2"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="19sp" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
